--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
     min-height: 100vh;
     width:100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/download.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(download.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -286,7 +286,7 @@ h3{
 .cta{
     margin: 100px auto;
     width:80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("images/OIP%20(9).jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("OIP%20(9).jpg");
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -334,7 +334,7 @@ h3{
 .sub-header{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("images/OIP%20(10).JPG");
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("OIP%20(10).JPG");
     background-position: center;
     background-size: cover;
     text-align: center;
